syntax = "proto3";

package auth.v1;

option go_package = "github.com/ADRPUR/event-driven-marketplace/api/proto/auth/v1;auth1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token  = 1;
  string refresh_token = 2;
  string token_type    = 3; // "bearer"
  int64  expires_in    = 4; // seconds
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Refresh(LoginResponse) returns (LoginResponse);
  rpc Logout(google.protobuf.Empty) returns (google.protobuf.Empty);
}